src/objects/Training_Series__c.object
<CustomObject>
    <description>Training Series includes details pertaining to the series and the related training titles.</description>
    <fields>
        <fullName>Book_Maninual_Incluede__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box to confirm that a training book or manual is included with the series.</inlineHelpText>
        <label>Book/Maninual Incluede</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book_is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to confirm if a Training Book is provided with the series of training titles</inlineHelpText>
        <label>Book is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter the description of the Training Series</inlineHelpText>
        <label>Description</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RowVersion__c</fullName>
        <inlineHelpText>This is the RowVersion referenced in CTS</inlineHelpText>
        <label>RowVersion</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeriesTitleCode__c</fullName>
        <inlineHelpText>Code for Series in BMS</inlineHelpText>
        <label>SeriesTitleCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series_ID__c</fullName>
        <inlineHelpText>This is the Series ID used in the</inlineHelpText>
        <label>Series ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Series_Import_Record_ID__c</fullName>
        <inlineHelpText>Record ID from Import so we can find the correct records.</inlineHelpText>
        <label>Training Series Import Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Training Series</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Book_Maninual_Incluede__c</columns>
        <columns>Series_ID__c</columns>
        <columns>SeriesTitleCode__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Order_Administration_Training_Series</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Administration</label>
        <queue>Order_Administration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Training Series Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>